--- a/train.ipynb
+++ b/train.ipynb
@@ -121,10 +121,12 @@
     "    smooth_trajectories = pixel_trajectories + W\n",
     "    p_hat = pixel_trajectories[:,:-1, ...] + W[:,:-1, ...]\n",
     "    q_hat = pixel_trajectories[:,1:, ...] + W[:,1:, ...]\n",
-    "    #smoothness = torch.mean(torch.sqrt((p_hat - q_hat + epsilon)**2))\n",
     "    smoothness = torch.mean(torch.sum(torch.sqrt(torch.sum(torch.pow(p_hat - q_hat + epsilon, 2), dim=-1)), dim = (1,2,3)))\n",
     "    similarity = torch.mean(torch.sqrt((pixel_trajectories - smooth_trajectories + epsilon)**2))\n",
-    "    return smoothness \n",
+    "\n",
+    "    magnitude = torch.sqrt(dx.mean()**2 + dy.mean()**2)\n",
+    "    indicator = max(-1.93 * magnitude + 0.95,0)\n",
+    "    return indicator * smoothness + similarity\n",
     "\n",
     "\n",
     "def spatial_loss(net_out):\n",
